@@ -50,6 +50,7 @@ Digest::MD5                                    = 0
 File::chdir                                    = 0
 File::IgnoreReadonly                           = 0
 File::Touch                                    = 0
+HTML::Barcode::QRCode                          = 0
 HTTP::Tiny                                     = 0
 IPC::Run                                       = 0
 JSON                                           = 0
